Fixes: Staggering of FAQ collapse
Updates: Added some animations on scroll

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -903,11 +903,6 @@ video {
   margin-bottom: 1rem;
 }
 
-.mx-5{
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
 .mx-8{
   margin-left: 2rem;
   margin-right: 2rem;
@@ -945,10 +940,6 @@ video {
 
 .mr-2{
   margin-right: 0.5rem;
-}
-
-.mb-2{
-  margin-bottom: 0.5rem;
 }
 
 .ml-2{
@@ -1025,6 +1016,10 @@ video {
 
 .-mt-10{
   margin-top: -2.5rem;
+}
+
+.max-h-0{
+  max-height: 0px;
 }
 
 .max-w-md{
@@ -1591,6 +1586,12 @@ video {
   --tw-scale-y: 1.1;
 }
 
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition{
   transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1605,6 +1606,10 @@ video {
 
 .duration-300{
   transition-duration: 300ms;
+}
+
+.duration-700{
+  transition-duration: 700ms;
 }
 
 @-webkit-keyframes spin{
@@ -1707,11 +1712,8 @@ body {
   color: white;
 }
 
-.content {
+.max-h-0 {
   max-height: 0;
-  color: white;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
 }
 
 @-webkit-keyframes move_wave {
@@ -1848,23 +1850,23 @@ body {
 
 @-webkit-keyframes flicker {
   0%,
-    19.999%,
-    22%,
-    62.999%,
-    64%,
-    64.999%,
-    70%,
-    100% {
+	19.999%,
+	22%,
+	62.999%,
+	64%,
+	64.999%,
+	70%,
+	100% {
     opacity: 0.99;
     text-shadow: -1px -1px 0 rgba(255, 255, 255, 0.4), 1px -1px 0 rgba(255, 255, 255, 0.4), -1px 1px 0 rgba(255, 255, 255, 0.4), 1px 1px 0 rgba(255, 255, 255, 0.4), 0 -2px 8px, 0 0 2px, 0 0 5px #00a7e1, 0 0 15px #007ea7, 0 0 2px #00a7e1, 0 2px 3px #000;
   }
 
   20%,
-    21.999%,
-    63%,
-    63.999%,
-    65%,
-    69.999% {
+	21.999%,
+	63%,
+	63.999%,
+	65%,
+	69.999% {
     opacity: 0.4;
     text-shadow: none;
   }
@@ -1872,23 +1874,23 @@ body {
 
 @keyframes flicker {
   0%,
-    19.999%,
-    22%,
-    62.999%,
-    64%,
-    64.999%,
-    70%,
-    100% {
+	19.999%,
+	22%,
+	62.999%,
+	64%,
+	64.999%,
+	70%,
+	100% {
     opacity: 0.99;
     text-shadow: -1px -1px 0 rgba(255, 255, 255, 0.4), 1px -1px 0 rgba(255, 255, 255, 0.4), -1px 1px 0 rgba(255, 255, 255, 0.4), 1px 1px 0 rgba(255, 255, 255, 0.4), 0 -2px 8px, 0 0 2px, 0 0 5px #00a7e1, 0 0 15px #007ea7, 0 0 2px #00a7e1, 0 2px 3px #000;
   }
 
   20%,
-    21.999%,
-    63%,
-    63.999%,
-    65%,
-    69.999% {
+	21.999%,
+	63%,
+	63.999%,
+	65%,
+	69.999% {
     opacity: 0.4;
     text-shadow: none;
   }
@@ -1913,18 +1915,18 @@ body {
 }
 
 .gold {
-  --bg-color: #FFD700;
+  --bg-color: #ffd700;
   --box-shadow-color: rgba(255, 215, 0, 0.6);
 }
 
 .silver {
-  --bg-color: #C0C0C0;
+  --bg-color: #c0c0c0;
   --box-shadow-color: rgba(192, 192, 192, 0.6);
 }
 
 .bronze {
   --bg-color: #cd7f32;
-  --box-shadow-color: rgba(205, 127, 50, 0.6)
+  --box-shadow-color: rgba(205, 127, 50, 0.6);
 }
 
 .card {
@@ -1965,7 +1967,7 @@ body {
 .wrapper {
   display: grid;
   height: 100vh;
-  place-items: center
+  place-items: center;
 }
 
 @media (min-width: 640px){
@@ -2015,11 +2017,6 @@ body {
   .sm\:px-0{
     padding-left: 0px;
     padding-right: 0px;
-  }
-
-  .sm\:py-2{
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
   }
 
   .sm\:pt-0{
@@ -2145,11 +2142,6 @@ body {
   .md\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-  }
-
-  .md\:py-4{
-    padding-top: 1rem;
-    padding-bottom: 1rem;
   }
 
   .md\:pt-4{
